Keeping all datasets when removing a library